--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>cardfolio</title>
 </head>
 
-<body>
+<body class="ant-layout">
   <div id="root"></div>
   <script type="module" src="/src/index.jsx"></script>
 </body>
